--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     <title>Robotic Rabbit Syndicate</title>
   </head>
   <body style="background-color: #0a0a0a">
-    <div id="root"></div>
+    <div id="root">
+      <div style="align-items: center; display: flex; height: 100dvh; justify-content: center">
+        <img src="loader.gif" alt="Loading" width="100px" height="100px"/>
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
